--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/compression": "^1.0.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/dotenv": "^6.1.1",
@@ -23,6 +24,7 @@
     "@types/node": "^12.7.4",
     "@types/nodemailer": "^6.2.1",
     "@types/pg": "^7.11.1",
+    "@types/qs": "^6.9.0",
     "@types/shortid": "0.0.29",
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
@@ -41,12 +43,15 @@
     "typescript": "^3.6.3"
   },
   "dependencies": {
+    "@octokit/rest": "^16.35.0",
+    "axios": "^0.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "dataloader": "^1.4.0",
     "dotenv": "^8.1.0",
+    "googleapis": "^45.0.0",
     "gql-merge": "0.0.6",
     "graphql": "^14.5.4",
     "graphql-yoga": "^1.18.3",
@@ -57,6 +62,7 @@
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.0",
     "pg": "^7.12.1",
+    "qs": "^6.9.1",
     "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.15",
     "typeorm": "^0.2.18",
