--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "dev:sync": "npm run typeorm schema:sync",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "dev": "cross-env NODE_ENV=development && ts-node-dev --respawn ./src/server.ts",
+    "server:start": "cross-env NODE_ENV=production && pm2 start ecosystem.config.js",
+    "server:stop": "pm2 stop ecosystem.config.js",
     "build:tsc": "tsc",
-    "build:graphql": "npm run pretypes && npm run types",
-    "build:webpack": "webpack"
+    "build:graphql": "npm run pretypes && npm run types"
   },
   "keywords": [],
   "author": "",
@@ -34,13 +35,11 @@
     "@typescript-eslint/eslint-plugin": "^2.3.1",
     "@typescript-eslint/parser": "^2.3.1",
     "babel-core": "^6.26.3",
+    "copyfiles": "^2.1.1",
     "eslint": "^6.4.0",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.1",
-    "graphql-code-generator": "^0.18.2",
-    "graphql-codegen-typescript-template": "^0.18.2",
-    "graphql-codegen-webpack": "^0.13.0",
     "prettier": "^1.18.2",
     "ts-loader": "^6.1.0",
     "ts-node": "^8.3.0",
@@ -49,10 +48,7 @@
     "tslint": "^5.20.0",
     "tslint-config-airbnb": "^5.11.1",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.7.4",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
-    "webpack-node-externals": "^1.7.2"
+    "typescript": "^3.7.4"
   },
   "dependencies": {
     "@octokit/rest": "^16.35.0",
