--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
         "strict": true /* Enable all strict type-checking options. */,
         "typeRoots": [
             "node_modules/@types",
-            "src/@types/graph.d.ts",
             "src/@types/typings.d.ts",
         ],
         "allowJs": true,
@@ -31,5 +30,8 @@
     "exclude": [
         "node_modules",
         "dist",
+        "build",
+        "webpack.config.js",
+        "ecosystem.config.js"
     ],
 }
