[fix] database 오류 수정

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev:sync": "npm run typeorm schema:sync",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "dev": "cross-env NODE_ENV=development && ts-node-dev --respawn ./src/server.ts",
+    "dev": "cross-env NODE_ENV=development  ts-node-dev --respawn ./src/server.ts",
     "server": "cross-env NODE_ENV=production node build/main.js",
-    "server:start": "cross-env NODE_ENV=production && pm2 start ecosystem.config.js",
+    "server:start": "cross-env NODE_ENV=production pm2 start ecosystem.config.js",
     "server:stop": "pm2 stop ecosystem.config.js",
     "build:tsc": "tsc",
     "build:webpack": "webpack",
@@ -73,7 +73,7 @@
     "lodash": "^4.17.15",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.0",
-    "pg": "^7.12.1",
+    "pg": "^7.17.1",
     "qs": "^6.9.1",
     "reflect-metadata": "^0.1.13",
     "shortid": "^2.2.15",
