--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/axios": "^0.14.0",
     "@types/compression": "^1.0.1",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
     "@types/dotenv": "^6.1.1",
     "@types/helmet": "0.0.44",
     "@types/joi": "^14.3.3",
