--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/joi": "^14.3.3",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/lodash": "^4.14.149",
+    "@types/mime-types": "^2.1.0",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.7.4",
     "@types/nodemailer": "^6.2.1",
@@ -59,6 +60,7 @@
     "@octokit/rest": "^16.35.0",
     "apollo-server-express": "^2.9.15",
     "axios": "^0.19.0",
+    "cloudinary": "^1.19.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
@@ -72,6 +74,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "mime-types": "^2.1.26",
     "morgan": "^1.9.1",
     "nodemailer": "^6.3.0",
     "pg": "^7.17.1",
