--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
-node_modules
-package-lock.json
-ormconfig.json
-.env.production
-.env.development
-/dist
-/build
-.vscode
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+.env
